# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py  tuntikirjanpito.md
csv/: testi.csv
data/: database.sqlite  schema.sql  testi.csv
dokumentaatio/: .vaatimusmaarittely.md.swp  arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: .gitignore
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: classes.py  database_setup.py  main.py
src/services/: service.py
src/tests/: classes_test.py  database_setup_test.py  service_test.py
src/ui/: add_cash_purchase.py  add_cash_view.py  add_info_view.py  all_info_view.py  budget_view.py  create_user_view.py  login_view.py  remove_user_view.py  ui.py
