[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Siiri <siiri.i.hirvonen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
cowsay = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
